--- a/index.html
+++ b/index.html
@@ -26,7 +26,16 @@
                     <a class="nav-link" href="#">Link</a>
                   </li>
 
-                  
+                  <li class="nav-item dropdown  ms-lg-5">
+                    <a class="nav-link dropdown-toggle active" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Category
+                    </a>
+                    <ul class="dropdown-menu" id="drop_down" style="width:500px">
+                      <li><a class="dropdown-item" href="Science.html">Science</a></li>
+                      <li><a class="dropdown-item" href="#">Commarce</a></li>
+                      <li><a class="dropdown-item" href="#">Art</a></li>
+                    </ul>
+                  </li>
 
                 </ul>
 
