--- a/science.html
+++ b/science.html
@@ -447,6 +447,7 @@
     integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
     crossorigin="anonymous"></script>
   <script src="science.js"></script>
+  <script sre="script.js"></script>
 </body>
 
 </html>
