--- a/aboutus.html
+++ b/aboutus.html
@@ -6,8 +6,10 @@
     <title>About Us</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
   </head>
-  <body>
+  <body style="background-color: antiquewhite;">
 
     <div id="wraper">
         <!----------------NAVBAR----------------->
@@ -54,7 +56,34 @@
           </nav>
 
     </div>
-    <div><h1>About Us</h1></div>
+    <div class="container-fluid" style="background-color: antiquewhite; margin-top: 70px;">
+  
+      <div class="row" style="display: flex; justify-content: center;">
+        <div class="col-5">
+           <div>
+            <h2>ABOUT US</h2>
+           </div>
+           <div style="text-align: start;">
+             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius, alias repellat modi laborum eveniet ab nulla ea in architecto ad.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio perferendis inventore blanditiis, quia officiis adipisci vitae amet similique error illum, quaerat optio voluptate voluptatibus harum accusamus facere qui nesciunt provident.
+             </p>
+           </div>
+           <div>
+            <button style="background-color: rgb(73, 72, 72); color: white;">Read more</button>
+           </div>
+           <div class="mt-3" style="display: flex; gap: 18px; ">
+            <i class="fa-brands fa-instagram" style="font-size: 25px; color: rgb(112, 34, 34);"></i>
+            <i class="fa-brands fa-facebook-f" style="font-size: 25px; color: rgb(112, 34, 34); "></i>
+            <i class="fa-brands fa-twitter" style="font-size: 25px; color: rgb(112, 34, 34); "></i>
+           </div>
+        </div>
+        <div class="col-5 activeimage">
+
+        </div>
+
+      </div>
+    </div>
+    
     
 
     <!-- <script src="script.js"></script> -->
