--- a/aboutus.html
+++ b/aboutus.html
@@ -77,9 +77,9 @@
             <button id="btn" style="background-color: rgb(73, 72, 72); color: white;">Read more</button>
            </div>
            <div class="mt-3" style="display: flex; gap: 18px; ">
-            <i class="fa-brands fa-instagram" style="font-size: 25px; color: rgb(112, 34, 34);"></i>
-            <i class="fa-brands fa-facebook-f" style="font-size: 25px; color: rgb(112, 34, 34); "></i>
-            <i class="fa-brands fa-twitter" style="font-size: 25px; color: rgb(112, 34, 34); "></i>
+            <i class="fa-brands fa-instagram" style="font-size: 25px; color: rgb(112, 34, 34); cursor: pointer;"></i>
+            <i class="fa-brands fa-facebook-f" style="font-size: 25px; color: rgb(112, 34, 34); cursor: pointer;"></i>
+            <i class="fa-brands fa-twitter" style="font-size: 25px; color: rgb(112, 34, 34); cursor: pointer;"></i>
            </div>
         </div>
         <div class="col-md-5 col-10 activeimage">
