--- a/aboutus.html
+++ b/aboutus.html
@@ -52,7 +52,7 @@
                           <a class="nav-link active" aria-current="page" href="aboutus.html" style="text-decoration: underline;">About us</a>
                         </li>
                         <li class="nav-item me-lg-5">
-                          <a class="nav-link" href="contactus.html">Contact Us</a>
+                          <a class="nav-link" href="contactUs.html">Contact Us</a>
                         </li>
                     </ul>
                   </span>
