--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <div id="wraper">
         <!----------------NAVBAR----------------->
+        <div>
+
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">Navbar</a>
@@ -52,6 +54,16 @@
               </div>
             </div>
           </nav>
+        </div>
+        <div id="mini" class="container-fluid">
+
+          <div id="mini1">
+            <h3>Exam information</h3>
+          </div>
+          <div id="mini2">
+          <p>Here is the start journey of life</p>
+          </div>   
+      </div>
 
     </div>
     
