--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item  ms-lg-5">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Book</a>
                   </li>
 
                   <li class="nav-item dropdown  ms-lg-5">
