--- a/aboutus.html
+++ b/aboutus.html
@@ -20,7 +20,7 @@
         <!----------------NAVBAR----------------->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <a class="navbar-brand" href="#"><i style="color: red;" class="fa-brands fs-1 fa-teamspeak" style="color: #000000;"></i></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -87,6 +87,22 @@
         </div>
 
       </div>
+       <!-- footer  -->
+       <footer class="mt-5">
+        <div class="f-info">
+            <div class="f-info-social">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-linkedin"></i>
+            </div>
+            <div class="f-info-brand">&copy; Wonderlust Private Limited</div>
+            <div class="f-info-links">
+                <a href="/privacy">privacy</a>
+                <a href="/terms">Terms</a>
+            </div>
+        </div>
+    </footer>
+
     </div>
     
     
