--- a/science.html
+++ b/science.html
@@ -24,7 +24,7 @@
     <!----------------------------------- NAVBAR--------------------------------------------->
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" id="logo" href="#">Navbar</a>
+          <a class="navbar-brand" id="logo" href="#"><i style="color: red;" class="fa-brands fs-1 fa-teamspeak" style="color: #000000;"></i></a>
           <button class="navbar-toggler" id="nav1btn" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -441,7 +441,7 @@
       </div>
     </div>
      <!-- footer  -->
-     <footer>
+     <footer class="mt-5">
       <div class="f-info">
           <div class="f-info-social">
               <i class="fa-brands fa-facebook"></i>
