--- a/science.html
+++ b/science.html
@@ -84,7 +84,7 @@
         <h4>Science Stream Exams</h4>
       </div>
       <div style="display: flex; justify-content: end;">
-        <button style="border-radius: 10px; display: none;" id="SeeAllExam">See All Exam</button>
+        <button class="bg-danger" style="border-radius: 10px; display: none; color: white; border: none; " id="SeeAllExam">See All Exam</button>
       </div>
     </div>
     <hr>
