--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
         <div id="mini" class="container-fluid">
 
           <div id="mini1">
-            <h3>Exam information</h3>
+            <h1>Exam Information</h1>
           </div>
           <div id="mini2">
-          <p>Here is the start journey of life</p>
+            <p>Exams are the stepping stones to the future you envision.</p>
           </div>   
       </div>
 
