--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                       Category
                     </a>
                     <ul class="dropdown-menu" id="drop_down" style="width:500px">
-                      <li><a class="dropdown-item" href="Science.html">Science</a></li>
+                      <li><a class="dropdown-item" href="science.html">Science</a></li>
                       <li><a class="dropdown-item" href="commarce.html">Commarce</a></li>
-                      <li><a class="dropdown-item" href="#">Art</a></li>
+                      <!-- <li><a class="dropdown-item" href="">Art</a></li> -->
                     </ul>
                   </li>
 
